# opengl-islands

./: Application.cpp  CMakeLists.txt  README.md
res/objects/: menu_bar.mtl  sphere.mtl  sun.mtl
res/objects/buttons/: button_1.mtl
res/objects/fire/: fire.mtl
res/objects/island/: island_cloud_1.mtl  island_grass.mtl  island_leaves_2.mtl  island_trees_wood.mtl  island_water.mtl  materials.mtl
res/objects/island_2/: island_2_grass.mtl
res/objects/pine_trees/: pine_spikes.mtl  pine_wood.mtl
res/shaders/: 3d_shader.glsl  animation.shader  black_white.glsl  phong.shader  skybox.shader  standard.shader  water.shader
src/: Shader.cpp  Shader.h  camera.cpp  camera.h  configuration.cpp  configuration.h  curve.cpp  curve.h  light.h  logger.cpp  logger.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  texture.cpp  texture.h  window.cpp  window.h
src/buffers/: buffer_layout.cpp  buffer_layout.h  buffers.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/shapes/: axes.cpp  axes.h  bridge.cpp  bridge.h  common.cpp  common.h  cube.cpp  cube.h  shapes.h  skybox.cpp  skybox.h
